add api health for check server status
