# docs/swagger.json
@@ -926,6 +926,32 @@
                     }
                 }
             }
+        },
+        "/api/health": {
+            "get": {
+                "tags": [
+                    "API"
+                ],
+                "summary": "Состояние сервера",
+                "responses": {
+                    "202": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "health"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
